--- a/package.json
+++ b/package.json
@@ -1,29 +1,29 @@
 {
-  "name": "react-native-shimmer-placeholder",
-  "version": "2.0.8",
-  "author": "Zaku",
+  "name": "expo-shimmer-placeholder",
+  "version": "3.0.0",
+  "author": "kdthomas21",
   "bugs": {
-    "url": "https://github.com/tomzaku/react-native-shimmer-placeholder/issues"
+    "url": "https://github.com/kdthomas2121/expo-shimmer-placeholder"
   },
   "directories": {
     "example": "example"
   },
-  "homepage": "https://github.com/tomzaku/react-native-shimmer-placeholder#readme",
+  "homepage": "https://github.com/kdthomas2121/expo-shimmer-placeholder",
   "keywords": [
     "loading",
     "placeholder",
     "react-native",
-    "shimmer"
+    "shimmer",
+    "expo"
   ],
   "license": "MIT",
-  "main": "./lib/ShimmerPlaceholder.js",
+  "main": "./lib/ShimmerPlaceHolder.js",
   "peerDependencies": {
-    "prop-types": ">=15.6.0",
-    "react-native-linear-gradient": ">=2.4.0"
+    "prop-types": ">=15.6.0"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/tomzaku/react-native-shimmer-placeholder.git"
+    "url": "git+https://github.com/kdthomas2121/expo-shimmer-placeholder.git"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" "
